Fixed BouncingPoleSpinjitzuCourseElementModel Updated and included playerAnimator Added spinjitzu rendering delay for starting anim Updated deps Added SpinningPoleSpinjitzuCourseElement